...
        android:layout_marginStart="@dimen/grid_3"
        android:layout_marginTop="@dimen/grid_2"
        android:layout_marginEnd="@dimen/grid_2"
        android:layout_toStartOf="@id/tv_amount"
        android:layout_toEndOf="@id/cv_category"
        android:ellipsize="end"
        android:maxLength="20"
        android:maxLines="1"
        android:textAlignment="viewStart"
        tools:text="Education" />

    <TextView
        android:id="@+id/tv_date"
...
